Kafka pub/sub changes
