# src/docs/swagger.json
@@ -91,6 +91,40 @@
                 }
             }
         },
+        "/orders/consumer/start": {
+            "get": {
+                "description": "Start the Kafka consumer to process orders",
+                "tags": [
+                    "Orders"
+                ],
+                "summary": "Start Kafka Consumer",
+                "responses": {
+                    "200": {
+                        "description": "Kafka consumer started successfully",
+                        "schema": {
+                            "$ref": "#/definitions/fiber.Map"
+                        }
+                    }
+                }
+            }
+        },
+        "/orders/consumer/stop": {
+            "get": {
+                "description": "Stop the Kafka consumer to process orders",
+                "tags": [
+                    "Orders"
+                ],
+                "summary": "Stop Kafka Consumer",
+                "responses": {
+                    "200": {
+                        "description": "Kafka consumer stopped successfully",
+                        "schema": {
+                            "$ref": "#/definitions/fiber.Map"
+                        }
+                    }
+                }
+            }
+        },
         "/orders/{id}": {
             "get": {
                 "description": "Fetch an order by ID",
@@ -398,6 +432,10 @@
         }
     },
     "definitions": {
+        "fiber.Map": {
+            "type": "object",
+            "additionalProperties": true
+        },
         "gorm.DeletedAt": {
             "type": "object",
             "properties": {
@@ -414,7 +452,7 @@
             "type": "object",
             "properties": {
                 "code": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "errors": {
                     "type": "array",
